--- a/Untitled-2.css
+++ b/Untitled-2.css
@@ -29,7 +29,7 @@ header{
 	flex-direction: column;
 	}
 .profile{
-	background-image: url("../../Pictures/Camera Roll/IMG-20210903-WA0010.jpg");
+	background-image: url("https://github.com/sffghjuyrniop/neomorfism/blob/master/IMG-20210903-WA0010.jpg");
 	width: 130px;
 	height: 130px;
 	border-radius: 50%;
